infrastructure/waddle.cloud/gitops/teleport-postinstall/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport-http-redirect
  namespace: teleport
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: http-teleport
  hostnames:
    - teleport.waddle.social
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
