infrastructure/waddle.cloud/gitops/teleport-postinstall/httproute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: https-teleport
  hostnames:
    - teleport.waddle.social
  rules:
    - backendRefs:
        - name: teleport
          port: 443
